dnl Process this file with autoconf to produce a configure script.
AC_INIT(color.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for libraries.

AC_CHECK_LIB(ncurses,main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/ioctl.h unistd.h sys/statfs.h \
                 sys/statvfs.h sys/sysproto.h sys/vfs.h sys/mount.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_STRFTIME
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS(getcwd mkdir rmdir strdup strerror strtoul statfs statvfs \
               define_key resizeterm lchown)

AC_OUTPUT(Makefile)
